# controllers_brubotics

./: CMakeLists.txt  README.md  create_controller.sh  create_empty_config_files.sh  package.xml  plugins.xml
TO CLEAN/launch/: controllers_brubotics.launch
cfg/: se3_brubotics_controller.cfg  se3_brubotics_load_controller.cfg  se3_brubotics_pm_controller.cfg  se3_controller_brubotics.cfg  se3_controller_brubotics_load.cfg  se3_controller_interns.cfg  se3_copy_controller.cfg  so3_controller_interns.cfg
changed_files/: control_manager.launch  control_manager.yaml
config/: F450_readytosky.m  README.md  address.yaml  motorparam_ready_to_sky_f450.m
config/default/: se3_brubotics.yaml  se3_brubotics_load.yaml  se3_brubotics_pm.yaml  se3_copy.yaml
config/private/: se3_copy_controller.yaml
config/public/: se3_copy_controller.yaml
config/simulation/f450/: motor_params_default.yaml
config/uav/f450/: motor_params_default.yaml  motorparam_ready_to_sky_f450.m
config/uav/t650/: se3_brubotics.yaml
include/: common.h  pid.hpp
include/se3_copy_controller/: se3_copy_controller.h
launch/: controllers_brubotics.launch  record_video.launch
src/: common.cpp
src/old_controller_load_transportation/se3_brubotics_load_controller/: se3_brubotics_load_controller.cpp
src/old_controller_load_transportation/se3_brubotics_pm_controller/: se3_brubotics_pm_controller.cpp
src/se3_brubotics_controller/: se3_brubotics_controller.cpp
src/se3_brubotics_load_controller/: OLDse3_brubotics_load_controller.cpp  se3_brubotics_load_controller.cpp
src/se3_brubotics_pm_controller/: se3_brubotics_pm_controller.cpp
src/se3_controller_brubotics/: se3_controller_brubotics.cpp
src/se3_controller_brubotics_load/: se3_controller_brubotics_load.cpp
src/se3_controller_brubotics_pm/: se3_controller_brubotics_pm.cpp
src/se3_controller_interns/: se3_controller_interns.cpp
src/se3_copy_controller/: se3_copy_controller.cpp
src/so3_controller_interns/: so3_controller_interns.cpp
