<?xml version="1.0"?>
<package format="2">
  <name>controllers_brubotics</name>
  <version>0.0.0</version>
  <description>The controllers_brubotics package</description>

  <maintainer email="sofiacathairna@gmail.com">Sofia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_managers</depend>
  <depend>mrs_uav_controllers</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrs_lib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>
</package>
