<?xml version="1.0"?>
<package format="2">

  <name>controllers_brubotics</name>
  <version>0.0.0</version>
  <description>The controllers_brubotics package</description>

  <author email="bryan.convens@gmail.com">Bryan Convens</author>
  <maintainer email="bryan.convens@gmail.com">Bryan Convens</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_managers</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>mrs_uav_controllers</depend>
  <depend>mrs_modules_msgs</depend>

  <export>
    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>
</package>
